# nomad200

./: README.md
ChipKit/: readme.txt
ChipKit/agv_ipleiria/: agv_ipleiria.pde
Motor_Controllers/: README.md  motor1.edc  motor2.edc  motor3.edc  readme.txt
qei-modules/: readme.txt
qei-modules/AGV_TURRET_QEI.X/: AGV_TURRET_QEI.X.rar  readme.txt  turret_main.c
qei-modules/AGV_WHEELS_QEI.X/: AGV_WHEELS_QEI.X.rar  wheels_main.c
ros/agv_ipleiria/: CMakeLists.txt  package.xml
ros/agv_ipleiria/launch/: agv_total.launch  chipkit.launch  laser.launch
ros/agv_ipleiria/msg/: AgvCommand.msg  AgvStatus.msg  RangeArray.msg
ros/agv_ipleiria/src/: agvipleiria_demo.cpp  agvmain_menu.cpp  kb_control.cpp  sensors_menu.cpp
ros/agv_ipleiria/srv/: Agv_main.srv  Agv_sensors.srv
